# fate-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tests.ipynb
app/: baml_adapter.py  dspy_modules.py  judges.py  main.py  models.py  signatures.py  utils.py
app/config/: app.yaml  runtime.py  settings.py
app/core/: constants.py  gm_hints_utils.py  skeleton.py  skills_utils.py
app/routes/: api.py  gm_hints.py  pages.py  remaining.py  skeleton.py
app/services/: registry.py
app/static/css/: main.css
app/static/js/: main.js  skills.js  state.js
app/templates/: index.html
artifacts/: gepa_character_skeleton.json  gepa_gm_hints.json  gepa_remaining.json
datasets/: dataset_gm_hints.json  dataset_remaining.json  dataset_skeleton.json  ideas.json
scripts/: generate_dataset.py  train_gepa_gm_hints.py  train_gepa_remaining.py  train_gepa_skeleton.py  validate_performance.py
tests/: test_generate_api.py  test_merge_logic.py  test_smoke.py
